@@ -11,6 +11,7 @@
 </DL>
 <DL>
 <DT><I>STANDARD OPTIONS</I></DT>
+<DT><I>Not themed</I></DT>
 <DD><TABLE CELLSPACING=0 CELLSPACING=0 BORDER=0>
 <TR>
 <TD>&nbsp;&nbsp;<A HREF="options.htm#M-background">-background or -bg</A></TD>
@@ -51,6 +52,30 @@
 <TR>
 <TD>&nbsp;&nbsp;<A HREF="options.htm#M-selectborderwidth">-selectborderwidth</A></TD>
 <TD>&nbsp;&nbsp;<A HREF="options.htm#M-selectforeground">-selectforeground</A></TD>
+</TR>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-takefocus">-takefocus</A></TD>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-text">-text</A></TD>
+</TR>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-textvariable">-textvariable</A></TD>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-xscrollcommand">-xscrollcommand</A></TD>
+</TABLE></DD>
+</DL>
+<DL>
+<DT><I>Themed</I></DT>
+<DD><TABLE CELLSPACING=0 CELLSPACING=0 BORDER=0>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-exportselection">-exportselection</A></TD>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-font">-font</A></TD>
+</TR>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-insertofftime">-insertofftime</A></TD>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-insertontime">-insertontime</A></TD>
+</TR>
+<TR>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-insertwidth">-insertwidth</A></TD>
+<TD>&nbsp;&nbsp;<A HREF="options.htm#M-justify">-justify</A></TD>
 </TR>
 <TR>
 <TD>&nbsp;&nbsp;<A HREF="options.htm#M-takefocus">-takefocus</A></TD>
